--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/gamejam2020.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/gamejam2020.data.br",
-        frameworkUrl: "Build/gamejam2020.framework.js.br",
-        codeUrl: "Build/gamejam2020.wasm.br",
+        dataUrl: "Build/gamejam2020.data.unityweb",
+        frameworkUrl: "Build/gamejam2020.framework.js.unityweb",
+        codeUrl: "Build/gamejam2020.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Robot Cockfight!",
